# project4

./: README.md  main.py  pyproject.toml
.github/workflows/: action.yml
align/: align.py
test/: test_align.py
